# EldenRingLauncher

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  EldenRingLauncher.sln  EldenRingLauncher.vcxproj  EldenRingLauncher.vcxproj.filters  README.md
dependencies/Resources/include/: Resources.h
dependencies/Resources/lib/: Resources.lib
dependencies/RudaFont/include/: RudaBold.h
resources/: resources.rc
src/: app_version.h.in  constants.rs  gui.cpp  gui.h  gui_style.cpp  gui_style.h  main.cpp  main.rs  panic_hook.rs  style.rs  ui.rs  util_defines.h
