[package]
name = "elden_ring_launcher"
version = "3.0.1"
edition = "2021"

[[bin]]
name = "start_protected_game"
path = "./src/main.rs"

[dependencies]
glow = "0.12.0" # GL Bindings
sdl2 = { version = "0.34.5", features = ["bundled", "static-link", "use-pkgconfig"] } # SDL2 Bindings
imgui = "0.11.0" # ImGui bindings
imgui-sdl2-support = "0.11.0" # ImGui SDL support
imgui-glow-renderer = "0.11.0" # ImGui glow renderer
native-dialog = "0.6.3" # Native Message Boxes
ctor = "0.2.0" # __attribute__((constructor))